--- a/Cooleaf/Application Controllers/Interests/SingleInterestPage/NPInterestViewController.xib
+++ b/Cooleaf/Application Controllers/Interests/SingleInterestPage/NPInterestViewController.xib
@@ -53,8 +53,8 @@
                             <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3au-Rt-fAT">
-                            <rect key="frame" x="280" y="203" width="32" height="32"/>
-                            <state key="normal" image="LeaveGroupButton">
+                            <rect key="frame" x="246" y="210" width="66" height="25"/>
+                            <state key="normal" image="leaveClear">
                                 <color key="titleColor" red="0.30588235289999999" green="0.80392156859999997" blue="0.76862745099999996" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
@@ -63,8 +63,8 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yCZ-UE-DfT">
-                            <rect key="frame" x="280" y="203" width="32" height="32"/>
-                            <state key="normal" image="JoinGroupButton">
+                            <rect key="frame" x="246" y="210" width="66" height="25"/>
+                            <state key="normal" image="joinClear">
                                 <color key="titleColor" red="0.30588235289999999" green="0.80392156859999997" blue="0.76862745099999996" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
@@ -133,7 +133,7 @@
         <image name="ArrowUp" width="21" height="11"/>
         <image name="ArrowUpDisabled" width="21" height="11"/>
         <image name="CoverPhotoPlaceholder" width="320" height="75"/>
-        <image name="JoinGroupButton" width="32" height="32"/>
-        <image name="LeaveGroupButton" width="32" height="32"/>
+        <image name="joinClear" width="206" height="78"/>
+        <image name="leaveClear" width="206" height="78"/>
     </resources>
 </document>
