--- a/Cooleaf/Application Controllers/NPLoginViewController/NPLoginViewController.xib
+++ b/Cooleaf/Application Controllers/NPLoginViewController/NPLoginViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NPLoginViewController">
@@ -141,8 +141,8 @@
                     <rect key="frame" x="160" y="64" width="160" height="6"/>
                     <color key="backgroundColor" red="1" green="0.30991683469999998" blue="0.25825352820000003" alpha="1" colorSpace="calibratedRGB"/>
                 </view>
-                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="V5V-Bw-vuq">
-                    <rect key="frame" x="40" y="118" width="240" height="52"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="CooleafLogoTrans240" translatesAutoresizingMaskIntoConstraints="NO" id="V5V-Bw-vuq">
+                    <rect key="frame" x="85" y="118" width="150" height="52"/>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y2V-Tz-pyp">
                     <rect key="frame" x="20" y="370" width="280" height="30"/>
@@ -169,7 +169,7 @@
         </activityIndicatorView>
     </objects>
     <resources>
-        <image name="logo.png" width="240" height="52"/>
+        <image name="CooleafLogoTrans240" width="150" height="52"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
