--- a/Cooleaf/Application Controllers/HomeTab/NPHomeCell.xib
+++ b/Cooleaf/Application Controllers/HomeTab/NPHomeCell.xib
@@ -44,13 +44,12 @@
                                     <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" fixedFrame="YES" image="WhiteEvents" translatesAutoresizingMaskIntoConstraints="NO" id="Kfj-QA-Qnt">
                                         <rect key="frame" x="284" y="10" width="24" height="24"/>
                                     </imageView>
-                                    <textView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" text="Some title" translatesAutoresizingMaskIntoConstraints="NO" id="Fgk-YA-QCN">
-                                        <rect key="frame" x="0.0" y="0.0" width="300" height="26"/>
-                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="calibratedRGB"/>
-                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Some Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oY3-29-9yh">
+                                        <rect key="frame" x="6" y="5" width="270" height="21"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
-                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                    </textView>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="10 November 2014" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IqG-WG-afi">
                                         <rect key="frame" x="5" y="22" width="220" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -89,7 +88,7 @@
                 <outlet property="eventDate" destination="IqG-WG-afi" id="t2G-EQ-QIq"/>
                 <outlet property="eventImage" destination="tTt-XT-3l4" id="wYf-sb-V3R"/>
                 <outlet property="eventTags" destination="Wuz-F1-706" id="LqW-va-wjH"/>
-                <outlet property="eventTitle" destination="Fgk-YA-QCN" id="rkq-pw-afh"/>
+                <outlet property="eventTitle" destination="oY3-29-9yh" id="fAL-GG-869"/>
                 <outlet property="joinButton" destination="jlP-Sl-Muv" id="x07-bB-RNc"/>
                 <outlet property="loadingIndicator" destination="kKy-BD-N8o" id="kpe-xp-keE"/>
                 <outlet property="selectionView" destination="BuR-h4-IKk" id="83g-Gy-9rT"/>
