--- a/Cooleaf/Application Controllers/NPProfileViewController/NPProfileViewController.xib
+++ b/Cooleaf/Application Controllers/NPProfileViewController/NPProfileViewController.xib
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <objects>
@@ -10,15 +9,15 @@
                 <outlet property="avatarView" destination="R8Z-fZ-DcX" id="eDI-jy-bdF"/>
                 <outlet property="blurImage" destination="J4H-cq-3Zb" id="AFy-NH-LXW"/>
                 <outlet property="clearView" destination="Fg1-Ql-fYC" id="MdS-Ox-vtp"/>
-                <outlet property="departmentView" destination="w3N-ju-CV2" id="RC5-az-8OI"/>
                 <outlet property="editDepartment" destination="j0w-rw-dPe" id="hbj-d9-klH"/>
                 <outlet property="editLocation" destination="GL5-Fn-cMW" id="TmQ-93-hcY"/>
                 <outlet property="imageCoverView" destination="But-9o-aID" id="sFR-pZ-exJ"/>
-                <outlet property="locationView" destination="JX1-Xs-49U" id="Fa6-1n-Pgs"/>
                 <outlet property="nameLabel" destination="X5U-08-nAu" id="YP4-hM-BVS"/>
                 <outlet property="positionLabel" destination="jrp-0I-Xt6" id="NyR-h9-b16"/>
                 <outlet property="rewardPoints" destination="6z7-B9-oeB" id="9l8-Jy-2KA"/>
                 <outlet property="scrollView" destination="Y7z-Ly-XFA" id="GA8-3h-Ikl"/>
+                <outlet property="tagView1" destination="w3N-ju-CV2" id="sy7-LY-CM9"/>
+                <outlet property="tagView2" destination="JX1-Xs-49U" id="Xy0-J8-TyG"/>
                 <outlet property="view" destination="1" id="3"/>
             </connections>
         </placeholder>
